<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.settings.SettingsFragment">

    <RelativeLayout
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#858585"
        android:elevation="4dp"
        android:padding="10dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/innstillinger"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_settings"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/omOss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginBottom="10dp"
            android:background="#eeeeee">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/om_oss"
                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/bruksAnvisning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginBottom="10dp"
            android:background="#eeeeee">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bruksanvisning"
                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>


        <!--<RelativeLayout
            android:id="@+id/darktheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="#eeeeee"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mørk modus"
                android:textSize="15dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <Switch
                android:id="@+id/darktheme_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>-->



        <RelativeLayout
            android:id="@+id/delete_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginBottom="10dp"
            android:background="#ff0000">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slett_data"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>



    </LinearLayout>


</RelativeLayout>